--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   position: relative;
   @include mobile {
-    padding: 6.7rem 0 0;
+    padding: 6rem 0 4rem;
   }
   .head {
     position: absolute;
